--- a/index.html
+++ b/index.html
@@ -7,6 +7,118 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
+    <div class="container">
+      <div class="square">
+
+      </div>
+      <div class="square">
+
+      </div>
+      <div class="square">
+
+      </div>
+      <div class="square">
+
+      </div>
+      <div class="square">
+
+      </div>
+      <div class="square">
+
+      </div>
+      <div class="square">
+
+      </div>
+      <div class="square">
+
+      </div>
+      <div class="square">
+
+      </div>
+      <div class="square">
+
+      </div>
+      <div class="square">
+
+      </div>
+      <div class="square">
+
+      </div>
+      <div class="square">
+
+      </div>
+      <div class="square">
+
+      </div>
+      <div class="square">
+
+      </div>
+      <div class="square">
+
+      </div>
+      <div class="square">
+
+      </div>
+      <div class="square">
+
+      </div>
+      <div class="square">
+
+      </div>
+      <div class="square">
+
+      </div>
+      <div class="square">
+
+      </div>
+      <div class="square">
+
+      </div>
+      <div class="square">
+
+      </div>
+      <div class="square">
+
+      </div>
+      <div class="square">
+
+      </div>
+      <div class="square">
+
+      </div>
+      <div class="square">
+
+      </div>
+      <div class="square">
+
+      </div>
+      <div class="square">
+
+      </div>
+      <div class="square">
+
+      </div>
+      <div class="square">
+
+      </div>
+      <div class="square">
+
+      </div>
+      <div class="square">
+
+      </div>
+      <div class="square">
+
+      </div>
+      <div class="square">
+
+      </div>
+      <div class="square">
+
+      </div>
+
+
+    </div>
     <script src="main.js" charset="utf-8"></script>
   </body>
 </html>
